[gd_scene load_steps=4 format=3 uid="uid://caqofl2aputmj"]

[ext_resource type="Theme" uid="uid://bdbrorqnphd2y" path="res://addons/Godoreographer/_base/godoreographer_theme.tres" id="1_t2baa"]
[ext_resource type="Script" uid="uid://dltpwy6vxfov0" path="res://addons/Godoreographer/_base/time_ruler.gd" id="2_sx1tp"]
[ext_resource type="Script" uid="uid://bu2qptn4bhahd" path="res://addons/Godoreographer/_base/waveform_display.gd" id="3_ys8qi"]

[node name="WaveformViewport" type="VBoxContainer"]
theme_override_constants/separation = 0

[node name="TopButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LoadButton" type="Button" parent="TopButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load Audio"

[node name="PlayPauseButton" type="Button" parent="TopButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play"

[node name="VSeparator" type="VSeparator" parent="TopButtonContainer"]
layout_mode = 2

[node name="ZoomInButton" type="Button" parent="TopButtonContainer"]
layout_mode = 2
text = "Zoom In"

[node name="ZoomOutButton" type="Button" parent="TopButtonContainer"]
layout_mode = 2
text = "Zoom Out"

[node name="VSeparator2" type="VSeparator" parent="TopButtonContainer"]
layout_mode = 2

[node name="PanLeftButton" type="Button" parent="TopButtonContainer"]
layout_mode = 2
text = "Pan Left"

[node name="PanRightButton" type="Button" parent="TopButtonContainer"]
layout_mode = 2
text = "Pan Right"

[node name="InfoHBox" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="LoadedFileName" type="Label" parent="InfoHBox"]
layout_mode = 2
mouse_default_cursor_shape = 1
text = "sample Slow Groove with Tempo Change.wav"

[node name="VSeparator" type="VSeparator" parent="InfoHBox"]
layout_mode = 2

[node name="RangeLabel" type="Label" parent="InfoHBox"]
layout_mode = 2
text = "Range: 10 sec"

[node name="VSeparator2" type="VSeparator" parent="InfoHBox"]
layout_mode = 2

[node name="TimeRuler" type="Control" parent="."]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme = ExtResource("1_t2baa")
theme_type_variation = &"TimeRuler"
script = ExtResource("2_sx1tp")

[node name="WaveformDisplay" type="Control" parent="."]
custom_minimum_size = Vector2(800, 150)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 1
theme = ExtResource("1_t2baa")
theme_type_variation = &"WaveformDisplay"
script = ExtResource("3_ys8qi")

[node name="SelectedMarkerContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarkerTypeDropdown" type="OptionButton" parent="SelectedMarkerContainer"]
visible = false
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "GENERIC"
popup/item_0/id = 0
popup/item_1/text = "BEAT"
popup/item_1/id = 1
popup/item_2/text = "CUE"
popup/item_2/id = 2
